# FPGA-Convolution-Neural-Network-Accelerator-in-Cpp-Vitis-HLS-

./: .gitignore  CMakeLists.txt  README.md  script.tcl  script_baseline.tcl
include/: config.h  fixed_point.h  layers.h  types.h
src/: benchmark.cpp  cnn_top.cpp  conv_baseline.cpp  conv_fixed.cpp  conv_naive.cpp  fixed_point.cpp  pooling.cpp  pooling_fixed.cpp  relu.cpp  relu_fixed.cpp
testbench/: main.cpp
